Add Moment extension

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,12 @@
 
 {% block title %}Flask Post{% endblock %}
 
+{% block scripts %}
+{{ super() }}
+{{ moment.include_moment() }}
+{{ moment.locale('es') }}
+{% endblock %}
+
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
